[gd_scene load_steps=5 format=3 uid="uid://bqpjobh068c6u"]

[ext_resource type="Script" uid="uid://4ih31e7yg172" path="res://Assets/Scripts/SettingsScript.gd" id="1_f2bev"]
[ext_resource type="AudioStream" uid="uid://bv63xjbpfg0xp" path="res://Assets/Sounds/BlipSound.wav" id="3_lqgjh"]
[ext_resource type="Theme" uid="uid://ow000d0w1g6a" path="res://Assets/Custom Themes/SettingsTheme.tres" id="3_m1o7v"]
[ext_resource type="AudioStream" uid="uid://cuwo3d8m3or0s" path="res://Assets/Sounds/Select.wav" id="4_lqgjh"]

[node name="SettingsMenu" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -75.0
offset_right = 300.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(266, 58)
alignment = 1
script = ExtResource("1_f2bev")

[node name="BrowserRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BrowserLabel" type="Label" parent="BrowserRow"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_m1o7v")
text = "Web Browser "

[node name="BrowserOption" type="OptionButton" parent="BrowserRow"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("3_m1o7v")

[node name="ResolutionRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="ResolutionRow"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_m1o7v")
text = "Resolution "

[node name="ResolutionOption" type="OptionButton" parent="ResolutionRow"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("3_m1o7v")
item_count = 6
popup/item_0/text = "3840×2160"
popup/item_0/id = 0
popup/item_1/text = "2560×1440"
popup/item_1/id = 1
popup/item_2/text = "1920×1080"
popup/item_2/id = 2
popup/item_3/text = "1600×900"
popup/item_3/id = 3
popup/item_4/text = "1280×720"
popup/item_4/id = 4
popup/item_5/text = "1024×640 (Default)"
popup/item_5/id = 5

[node name="SettingsMargins" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="SettingsButtonContainer" type="HBoxContainer" parent="SettingsMargins"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="SettingsMargins/SettingsButtonContainer"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_m1o7v")
text = "Back"

[node name="SaveButton" type="Button" parent="SettingsMargins/SettingsButtonContainer"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_m1o7v")
text = "Save"

[node name="MenuSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lqgjh")
volume_db = -5.0

[node name="MenuClicks" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lqgjh")
volume_db = -5.0

[connection signal="item_selected" from="BrowserRow/BrowserOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="pressed" from="BrowserRow/BrowserOption" to="." method="_on_browser_option_pressed"]
[connection signal="item_selected" from="ResolutionRow/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="pressed" from="ResolutionRow/ResolutionOption" to="." method="_on_browser_option_pressed"]
[connection signal="pressed" from="SettingsMargins/SettingsButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsMargins/SettingsButtonContainer/SaveButton" to="." method="_on_settings_save_button_pressed"]
